--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
-theme :
-  name : twitter
+theme:
+  name: dinky
 layout: default
 ---
 {% include JB/setup %}
-{% include themes/twitter/post.html %}
+{% include themes/dinky/post.html %}
