--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
-theme :
-  name : twitter
+theme:
+  name: dinky
 layout: default
 ---
 {% include JB/setup %}
-{% include themes/twitter/page.html %}
+{% include themes/dinky/page.html %}
