--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -103,8 +103,9 @@ ul li {
 }
 
 ol li {
-  list-style: decimal inside;
-  padding-left: 20px;
+  list-style: decimal;
+  padding-left: 5px;
+  padding-bottom: 10px;
 }
 
 blockquote {
